# LoGe

./: .clang-format  .codespellignore  .gitignore  .gitmodules  .header_prefixes.txt  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  header_format_convention_linter.py  main.cpp  sdkconfig
.devcontainer/: devcontainer.json
.devcontainer/build_system/: build-impl.sh  build.sh
.devcontainer/scripts/debug/: flash_list.py  run.sh  telnet_exec.exp
.devcontainer/scripts/host/: esp_openocd.sh
src/: CMakeLists.txt  main.cpp
src/led_strip/: CMakeLists.txt
src/led_strip/led_strip/: led_strip.c  led_strip.h  led_strip_encoder.c  led_strip_encoder.h
src/stubs/esp32/: CMakeLists.txt  cpu_start.c  esp_chip_info.h  esp_system.h  system_api.c
src/stubs/freertos/: CMakeLists.txt  task.c
src/stubs/freertos/freertos/: task.h
src/stubs/led_strip/: CMakeLists.txt
src/stubs/led_strip/led_strip/: led_strip.h
src/stubs/spi_flash/: CMakeLists.txt  esp_flash.h  flash_ops.c
